--- a/Data_Structure/Segment_Tree_Scan_line_and_hash.tex
+++ b/Data_Structure/Segment_Tree_Scan_line_and_hash.tex
@@ -1,4 +1,4 @@
-\subsection{Scan line & hash(Sample is combine area)}
+\subsection{Segment Tree: Scan line & hash(Sample is combine area)}
     扫描线和哈希，例子是求面积合并。
     \begin{lstlisting}[language=c++]
 #define lson l, m, rt << 1
