fix readme of Segment_tree(Scan line and hash)

--- a/Data_Structure/Segment_Tree_Scan_line_and_hash.tex
+++ b/Data_Structure/Segment_Tree_Scan_line_and_hash.tex
@@ -1,5 +1,5 @@
 \subsection{Segment Tree: Scan line & hash(Sample is combine area)}
-    扫描线和哈希，例子是求面积合并。
+    线段树: 扫描线和哈希，例子是求面积合并。
     \begin{lstlisting}[language=c++]
 #define lson l, m, rt << 1
 #define rson m + 1, r, rt << 1 | 1
