--- a/Data_Structure/Segment_Tree_Scan_line_and_hash.tex
+++ b/Data_Structure/Segment_Tree_Scan_line_and_hash.tex
@@ -1,5 +1,4 @@
-\subsection{Segment Tree: Scan line & hash(Sample is combine area)}
-    线段树: 扫描线和哈希，例子是求面积合并。
+\subsection{线段树: 扫描线 & 哈希(例子是面积合并)}
     \begin{lstlisting}[language=c++]
 #define lson l, m, rt << 1
 #define rson m + 1, r, rt << 1 | 1
