--- a/Data_Structure/Segment_Tree_Section_update.tex
+++ b/Data_Structure/Segment_Tree_Section_update.tex
@@ -1,4 +1,4 @@
-\subsection{Segment Tree: Section update}
+\subsection{线段树: 区间更新}
     线段树: 区间更新，包含区间查询和单点查询。
     \begin{lstlisting}[language=c++]
 int li[maxn], ri[maxn];
