--- a/Graph/Euler_circuits_and_Hamiltonian_path.tex
+++ b/Graph/Euler_circuits_and_Hamiltonian_path.tex
@@ -1,6 +1,4 @@
-\subsection{Euler circuits and Hamiltonian path}
-    欧拉环和哈密尔顿路径
-
+\subsection{欧拉环和哈密尔顿路径}
     欧拉路径(一笔画问题)
     连通的无向图 G 有欧拉路径的充要条件是：G中奇顶点（连接的边数量为奇数的顶点）的数目等于0或者2。
     连通的无向图 G 是欧拉环（存在欧拉回路）的充要条件是：G中每个顶点的度都是偶数。[2]。
