fix title of keep array using splay

--- a/Data_Structure/Keep_Array_Using_Splay.tex
+++ b/Data_Structure/Keep_Array_Using_Splay.tex
@@ -1,5 +1,4 @@
-\subsection{Splay Tree}
-    Splay维护数列。
+\subsection{Splay维护数列}
     \begin{lstlisting}[language=c++]
 #include <cmath>
 #include <cstdio>
