fix the function in tex

--- a/Graph/Get_Biconnected_Component_Tarjan.tex
+++ b/Graph/Get_Biconnected_Component_Tarjan.tex
@@ -1,5 +1,5 @@
 \subsection{求双连通分量 Tarjan}
-对于边双连通分支，直接删除所有的桥/割边即可
+对于边双连通分支，直接删除所有的桥/割边即可\\
 以下为点双连通分支求法
     \begin{lstlisting}[language=c++]
 int cnt, top;
