--- a/Graph/Max_Clique.tex
+++ b/Graph/Max_Clique.tex
@@ -1,6 +1,6 @@
 \subsection{最大团 最大独立集}
-最大团与最大独立集求解
-最大独立集为原图的补图求最大团
+最大团与最大独立集求解\\
+最大独立集为原图的补图求最大团\\
 以下为标准的最大团求解
     \begin{lstlisting}[language=c++]
 int n, m;
