--- a/Graph/Stable_Marriage_Problem.tex
+++ b/Graph/Stable_Marriage_Problem.tex
@@ -1,5 +1,5 @@
 \subsection{稳定婚姻问题}
-稳定婚姻问题，采用Gale-Shaplley算法。
+稳定婚姻问题，采用Gale-Shaplley算法。\\
 第i个男生和第match\_b[i]个女生结婚最稳定。
     \begin{lstlisting}[language=c++]
 int n;
