--- a/Computational_Geometry.tex
+++ b/Computational_Geometry.tex
@@ -1,4 +1,8 @@
 \section{计算几何}
     \input Computational_Geometry/2D_Geometry_STL.tex
     \input Computational_Geometry/3D_Dis_Between_Two_Line_Segments.tex
+    \input Computational_Geometry/k-d_Tree.tex
+    \input Computational_Geometry/Area_Combine_Among_Convex_Polygon.tex
+    \input Computational_Geometry/Least_Circle_Overlay.tex
+    \input Computational_Geometry/Simpson.tex
 
