--- a/DataStructure.tex
+++ b/DataStructure.tex
@@ -9,3 +9,4 @@
     \input Data_Structure/Segment_Tree_Section_update.tex
     \input Data_Structure/Splay_Tree.tex
     \input Data_Structure/Tree_in_Tree.tex
+    \input Data_Structure/Binary_Index_Tree_in_2D.tex
