--- a/Graph.tex
+++ b/Graph.tex
@@ -12,3 +12,4 @@
     \input Graph/Second-best_Minmum_Spanning_Tree.tex
     \input Graph/Shortest_Path_SPFA.tex
     \input Graph/Stable_Marriage_Problem.tex
+    \input Graph/Diameter_of_Cactus_Graph.tex
