--- a/Math.tex
+++ b/Math.tex
@@ -3,4 +3,7 @@
     \input Math/Get_Prime_Number.tex
     \input Math/Get_phi.tex
     \input Math/Quick_pow.tex
-
+    \input Math/Polya.tex
+    \input Math/Gauss_Elimination.tex
+    \input Math/Combinatorial_Number.tex
+    \input Math/Math_Base.tex
