--- a/Other.tex
+++ b/Other.tex
@@ -1,4 +1,6 @@
-\seciton{其他}
+\section{其他}
     \input Other/Define_If_out_of_stack_space.tex
     \input Other/High-accuracy_Calculator.tex
+    \input Other/vimrc.tex
+    \input Other/include.tex
 
