--- a/String.tex
+++ b/String.tex
@@ -3,5 +3,6 @@
     \input String/KMP.tex
     \input String/Manacher.tex
     \input String/Suffix_Array.tex
+    \input String/Suffix_Automata.tex
     \input String/Tire_Tree.tex
 
