--- a/Graph/Euler_circuits_and_Hamiltonian_path.tex
+++ b/Graph/Euler_circuits_and_Hamiltonian_path.tex
@@ -6,8 +6,8 @@
     一个有向图是半欧拉图当且仅当该图的基图是连通的且有且只有一个点的入度比出度少1（作为欧拉路径的起点），有且只有一个点的入度比出度多1（作为终点），其余点的入度等于出度。\\
     \\
     哈密尔顿图 \\
-    设G=(V,E)是一个无向简单图，|V|=n.  n≥3. \\
-    若对于任意的两个顶点u，v∊V，d(u)+d(v) ≥n，\\
+    设G=(V,E)是一个无向简单图，$\mid$V$\mid$=n.  n≥3. \\
+    若对于任意的两个顶点u，v$\in$V，d(u)+d(v) ≥n，\\
     那么, G是哈密尔顿图\\
     \\
     以下为非递归求欧拉路径\\
