--- a/Graph/K-th_Shortest_Path.tex
+++ b/Graph/K-th_Shortest_Path.tex
@@ -1,7 +1,7 @@
 \subsection{第K短路}
 A* + Dijstra-第K短路问题\\
 估值函数: f = g + h\\
-对于估值函数中的h|\\
+对于估值函数中的h\\
 对于无向图，我们只需对原图做一次在 终点 的 dijstra ，就可以得到所有点到终点的最短距离\\
 对于有向图，我们可以吧原图反向建边，得到一个新图，再在新图中对 终点 做一次 dijstra ，这样就可以求出各点到终点的最短距离\\
 From s to t的第k短路\\
