--- a/Math/Polya.tex
+++ b/Math/Polya.tex
@@ -1,5 +1,5 @@
 \subsection{Polya定理}
-题意为：给你c种颜色的珠子，和一个长度为s(c,s<32)的项链，用这c种珠子串成这个项链，项链可以旋转和翻转，经过旋转和翻转所得的项链视为同一种项链，现在告诉你颜色总数c和项链的长度s，求共能组成几条不同的项链。\\
+题意为：给你c种颜色的珠子，和一个长度为s(c,s$<$32)的项链，用这c种珠子串成这个项链，项链可以旋转和翻转，经过旋转和翻转所得的项链视为同一种项链，现在告诉你颜色总数c和项链的长度s，求共能组成几条不同的项链。\\
 1.旋转置换\\
     依次顺时针旋转1 ~ n个，循环个数为gcd(i, n)\\
 2.翻转置换\\
@@ -52,11 +52,11 @@ int main() {
     \end{lstlisting}
 给出两个整数n和p，代表n个珠子，n种颜色，要求不同的项链数，并对结果mod（p）处理，置换只有旋转一种形式。\\
 这道题代表了一类题目的优化\\
-裸的算法是 ∑n(gcd(n,i)) 1<i<=n\\
+裸的算法是 $\Sigma$n(gcd(n,i)) 1$<$i$<$=n\\
 复杂度过高，进行优化。\\
 置换群种循环的个数L = n / gcd(n, i)\\
-因为如果L | n, 则有n / L | n\\
-则环的长度L的范围是1 ~ sqrt(L)\\
+因为如果L $\mid$ n, 则有n / L $\mid$ n\\
+则环的长度L的范围是1 $\scriptsize{\sim}$ sqrt(L)\\
 令a = gcd(n, i), 设i = at\\
 则只有i与t互质的时候，gcd(i, t) = a\\
 则最后可以优化为$\Sigma$($\Phi$(i) * $n^{i}$ ) \% p
